tests/snapshots/regression/nested__deep_parens.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/deep_parens.flx
exit_code: 1

• 4 errors • tests/fixtures/nested/deep_parens.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/nested/deep_parens.flx:1:1
  |
1 | print(((((1 + 2) * 3) - 4) / 5) == 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 4 errors.
